third_party/move/move-compiler-v2/tests/checking/specs/pragmas_err.exp

Diagnostics:
error: property `bar` is not valid in this context
  ┌─ tests/checking/specs/pragmas_err.move:7:9
  │
7 │         pragma bar = true;
  │         ^^^^^^^^^^^^^^^^^^

error: property `verify` specified more than once in the same pragma declaration
   ┌─ tests/checking/specs/pragmas_err.move:19:24
   │
19 │         pragma verify, verify;
   │                        ^^^^^^
